@@ -194,6 +194,10 @@ Core and builtins
   the data and the data length.  Instead, the appropriate tp_as_buffer
   method is called as necessary.  
 
+- fixed: if a file is opened with an explicit buffer size >= 1, repeated 
+  close() calls would attempt to free() the buffer already free()ed on
+  the first call.
+
 
 Extension modules
 -----------------
